# XYModem

./: .clang-format  .gitignore  README.md
App/: CMakeLists.txt
App/inc/: encryptdialog.h  plaintextedit.h  serial.h  textbrowser.h  widget.h  xymodem.h
App/resource/: resource.qrc
App/resource/start/: start_EN.html  start_ZH.html  startlogo.txt
App/resource/translations/: en_US.qm  en_US.ts
App/src/: encryptdialog.cpp  main.cpp  serial.cpp  widget.cpp  xymodem.cpp
App/ui/: encryptdialog.ui  widget.ui
Bootloader/IAP/inc/: XYModem.h  interface.h
Bootloader/IAP/src/: XYModem.c  interface.c
Bootloader/MDK/: XYModem-Bootloader.uvoptx  XYModem-Bootloader.uvprojx
Bootloader/Tiny-AES/inc/: aes.h
Bootloader/USER/src/: main.c  stm32f10x_it.c
Examples/App/inc/: App.h
Examples/App/src/: App.c
Examples/MDK/: XYModem-App.uvoptx  XYModem-App.uvprojx
Examples/USER/src/: main.c  stm32f10x_it.c
